--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@ async function checkWeather(city){
     }else{
     var data = await response.json();
 
+    if (data.name == "Israel"){
+    data.name = "Palestine";
+    }
+
 
     document.querySelector(".city").innerHTML = data.name;
     document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°c";
